--- a/agregarPension.html
+++ b/agregarPension.html
@@ -10,62 +10,6 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css">
     <style>
         /* Estilos básicos para el formulario y la tabla */
-        body {
-            font-family: Arial, sans-serif;
-            /* margin: 20px; */
-        }
-
-        form {
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            margin-top: 10px;
-        }
-
-        input,
-        select,
-        button {
-            width: 100%;
-            padding: 8px;
-            margin-top: 5px;
-            margin-bottom: 10px;
-            box-sizing: border-box;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-
-        table,
-        th,
-        td {
-            border: 1px solid black;
-        }
-
-        th,
-        td {
-            padding: 8px;
-            text-align: left;
-        }
-
-        th {
-            background-color: #f2f2f2;
-        }
-
-        button {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
     </style>
 </head>
 
@@ -81,115 +25,157 @@
 
     <div class="contenedor__formulario">
         <h1>Registro de Pensiones</h1>
-        <form class="formulario__pension" id="formPension">
-            <label for="numeroTag">Número de Tag:</label>
-            <input type="text" id="numeroTag">
+        <form class="formulario__general" id="formPension">
+            <div class="formulario__campo">
+                <label for="numeroTag">Número de Tag:</label>
+                <input type="text" id="numeroTag">
+            </div>
 
-            <label for="statusActivacion">Status de activación:</label>
-            <select id="statusActivacion">
-                <option value="Activo">Activo</option>
-                <option value="No activo">No activo</option>
-            </select>
+            <div class="formulario__campo">
+                <label for="statusActivacion">Status de activación:</label>
+                <select id="statusActivacion">
+                    <option value="Activo">Activo</option>
+                    <option value="No activo">No activo</option>
+                </select>
+            </div>
 
-            <label for="nomenclaturaLocal">Nomenclatura del local:</label>
-            <input type="text" id="nomenclaturaLocal">
+            <div class="formulario__campo">
+                <label for="nomenclaturaLocal">Nomenclatura del local:</label>
+                <input type="text" id="nomenclaturaLocal">
+            </div>
 
-            <label for="nombreLocal">Nombre del local:</label>
-            <input type="text" id="nombreLocal">
+            <div class="formulario__campo">
+                <label for="nombreLocal">Nombre del local:</label>
+                <input type="text" id="nombreLocal">
+            </div>
 
-            <label for="nombreSolicitante">Nombre del solicitante:</label>
-            <input type="text" id="nombreSolicitante">
+            <div class="formulario__campo">
+                <label for="nombreSolicitante">Nombre del solicitante:</label>
+                <input type="text" id="nombreSolicitante">
+            </div>
 
-            <label for="solicitaFactura">Solicita factura:</label>
-            <select id="solicitaFactura">
-                <option value="Si">Sí</option>
-                <option value="No">No</option>
-            </select>
+            <div class="formulario__campo">
+                <label for="solicitaFactura">Solicita factura:</label>
+                <select id="solicitaFactura">
+                    <option value="Si">Sí</option>
+                    <option value="No">No</option>
+                </select>
+            </div>
 
-            <label for="metodoPago">Método de pago:</label>
-            <select id="metodoPago">
-                <option value="Efectivo">Efectivo</option>
-                <option value="Transferencia">Transferencia</option>
-                <option value="Pago con tarjeta">Pago con tarjeta</option>
-            </select>
+            <div class="formulario__campo">
+                <label for="metodoPago">Método de pago:</label>
+                <select id="metodoPago">
+                    <option value="Efectivo">Efectivo</option>
+                    <option value="Transferencia">Transferencia</option>
+                    <option value="Pago con tarjeta">Pago con tarjeta</option>
+                </select>
+            </div>
 
-            <label for="fechaContratacion">Fecha de contratación:</label>
-            <input type="date" id="fechaContratacion">
+            <div class="formulario__campo">
+                <label for="fechaContratacion">Fecha de contratación:</label>
+                <input type="date" id="fechaContratacion">
+            </div>
 
-            <label for="statusPago">Status de pago:</label>
-            <select id="statusPago">
-                <option value="Activo">Activo</option>
-                <option value="No activo">No activo</option>
-            </select>
+            <div class="formulario__campo">
+                <label for="statusPago">Status de pago:</label>
+                <select id="statusPago">
+                    <option value="Activo">Activo</option>
+                    <option value="No activo">No activo</option>
+                </select>
+            </div>
 
-            <label for="mesesPagados">Meses pagados:</label>
-            <input type="number" id="mesesPagados" min="1">
+            <div class="formulario__campo">
+                <label for="mesesPagados">Meses pagados:</label>
+                <input type="number" id="mesesPagados" min="1">
+            </div>
 
-            <label for="fechaInicio">Fecha de inicio:</label>
-            <input type="date" id="fechaInicio">
+            <div class="formulario__campo">
+                <label for="fechaInicio">Fecha de inicio:</label>
+                <input type="date" id="fechaInicio">
+            </div>
 
-            <label for="lugar">Lugar:</label>
-            <input type="text" id="lugar">
+            <div class="formulario__campo">
+                <label for="lugar">Lugar:</label>
+                <input type="text" id="lugar">
+            </div>
 
-            <label for="telefono">Teléfono:</label>
-            <input type="tel" id="telefono">
+            <div class="formulario__campo">
+                <label for="telefono">Teléfono:</label>
+                <input type="tel" id="telefono">
+            </div>
 
-            <label for="correo">Correo:</label>
-            <input type="email" id="correo">
+            <div class="formulario__campo">
+                <label for="correo">Correo:</label>
+                <input type="email" id="correo">
+            </div>
 
-            <label for="modelo">Modelo:</label>
-            <input type="text" id="modelo">
+            <div class="formulario__campo">
+                <label for="modelo">Modelo:</label>
+                <input type="text" id="modelo">
+            </div>
 
-            <label for="color">Color:</label>
-            <input type="text" id="color">
+            <div class="formulario__campo">
+                <label for="color">Color:</label>
+                <input type="text" id="color">
+            </div>
 
-            <label for="placas">Placas:</label>
-            <input type="text" id="placas">
+            <div class="formulario__campo">
+                <label for="placas">Placas:</label>
+                <input type="text" id="placas">
+            </div>
 
-            <label for="año">Año:</label>
-            <input type="number" id="año" min="1900" max="2099">
+            <div class="formulario__campo">
+                <label for="año">Año:</label>
+                <input type="number" id="año" min="1900" max="2099">
+            </div>
 
-            <label for="notas">Notas:</label>
-            <textarea id="notas" rows="4"></textarea>
+            <div class="formulario__campo campo__full">
+                <label for="notas">Notas:</label>
+                <textarea id="notas" rows="4"></textarea>
+            </div>
 
-            <button type="submit">Guardar</button>
+            <div class="formulario__campo campo__full">
+                <button class="btn__primary-big btn__full" type="submit">Guardar</button>
+            </div>
         </form>
 
 
         <h2 class="tabla__titulo">Datos de Pensiones</h2>
 
-        <table id="tablaPensiones">
-            <thead>
-                <tr>
-                    <th>Número de Tag</th>
-                    <th>Status de activación</th>
-                    <th>Nomenclatura del local</th>
-                    <th>Nombre del local</th>
-                    <th>Nombre del solicitante</th>
-                    <th>Solicita factura</th>
-                    <th>Método de pago</th>
-                    <th>Fecha de contratación</th>
-                    <th>Status de pago</th>
-                    <th>Meses pagados</th>
-                    <th>Fecha de inicio</th>
-                    <th>Fecha de vencimiento</th>
-                    <th>Días por vencer</th>
-                    <th>Estado</th>
-                    <th>Lugar</th>
-                    <th>Teléfono</th>
-                    <th>Correo</th>
-                    <th>Modelo</th>
-                    <th>Color</th>
-                    <th>Placas</th>
-                    <th>Año</th>
-                    <th>Notas</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Los datos se insertarán aquí dinámicamente -->
-            </tbody>
-        </table>
+        <div class="tabla__contenedor">
+            <table id="tablaPensiones">
+                <thead>
+                    <tr>
+                        <th>Número de Tag</th>
+                        <th>Status de activación</th>
+                        <th>Nomenclatura del local</th>
+                        <th>Nombre del local</th>
+                        <th>Nombre del solicitante</th>
+                        <th>Solicita factura</th>
+                        <th>Método de pago</th>
+                        <th>Fecha de contratación</th>
+                        <th>Status de pago</th>
+                        <th>Meses pagados</th>
+                        <th>Fecha de inicio</th>
+                        <th>Fecha de vencimiento</th>
+                        <th>Días por vencer</th>
+                        <th>Estado</th>
+                        <th>Lugar</th>
+                        <th>Teléfono</th>
+                        <th>Correo</th>
+                        <th>Modelo</th>
+                        <th>Color</th>
+                        <th>Placas</th>
+                        <th>Año</th>
+                        <th>Notas</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Los datos se insertarán aquí dinámicamente -->
+                </tbody>
+            </table>
+        </div>
     </div>
 
     <!-- Tabla para mostrar los datos -->
