--- a/buscar.html
+++ b/buscar.html
@@ -25,30 +25,33 @@
     </div>
 
 
-    <!-- Tabla para mostrar resultados -->
-    <table id="tablaResultados" class="tabla__resultados">
-        <thead>
-            <tr>
-                <th>No. Tag</th>
-                <th>No. Alta</th>
-                <th>Local</th>
-                <th>Solicitante</th>
-                <th>Empresa / Proyecto</th>
-                <th>Status de Activación</th>
-                <th>Status de Entrega</th>
-                <th>Fecha de Alta</th>
-                <th>Teléfono</th>
-                <th>Correo</th>
-                <th>Modelo</th>
-                <th>Color</th>
-                <th>Placas</th>
-                <th>Año</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- Los resultados se insertarán aquí -->
-        </tbody>
-    </table>
+    <div class="contenedor__tabla">
+        <!-- Tabla para mostrar resultados -->
+        <table id="tablaResultados" class="tabla__resultados">
+            <thead>
+                <tr>
+                    <th>No. Tag</th>
+                    <th>No. Alta</th>
+                    <th>Local</th>
+                    <th>Solicitante</th>
+                    <th>Empresa / Proyecto</th>
+                    <th>Status de Activación</th>
+                    <th>Status de Entrega</th>
+                    <th>Fecha de Alta</th>
+                    <th>Teléfono</th>
+                    <th>Correo</th>
+                    <th>Modelo</th>
+                    <th>Color</th>
+                    <th>Placas</th>
+                    <th>Año</th>
+                    <th>Acción</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Los resultados se insertarán aquí -->
+            </tbody>
+        </table>
+    </div>
 
     <!-- Modal de edicion -->
     <!-- Modal de edición -->
