Estilos de botones y logo agregado a la barra de navegacion

--- a/agregarPension.html
+++ b/agregarPension.html
@@ -20,7 +20,12 @@
         <a class="navegacion__btn-regreso" href="index.html">
             <i class="btn-regreso__icon fa-solid fa-arrow-left"></i>
         </a>
+
+        <div class="navegacion__logo-contenedor">
+            <img class="logo__navegacion" src="assets/images/logo-transparente.png" alt="logo">
+        </div>
     </nav>
+
 
     <div class="contenedor__botonDescarga">
         <button class="btn__descarga-excel" id="btnDescargarExcel">
@@ -190,7 +195,7 @@
 
     <!-- Enlaza el archivo JavaScript -->
     <script type="module" src="assets/js/agregarPension.js"></script>
-    <script type="module" src="assets/js/descargaExcel.js"></script>
+    <script type="module" src="assets/js/descargaExcel.js" defer></script>
 </body>
 
 </html>
