--- a/agregar.html
+++ b/agregar.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-free-6.1.2-web/css/all.min.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.4/xlsx.full.min.js" defer></script>
 
 </head>
 
@@ -17,7 +18,18 @@
         <a class="navegacion__btn-regreso" href="index.html">
             <i class="btn-regreso__icon fa-solid fa-arrow-left"></i>
         </a>
+
+        <div class="navegacion__logo-contenedor">
+            <img class="logo__navegacion" src="assets/images/logo-transparente.png" alt="logo">
+        </div>
     </nav>
+
+    <div class="contenedor__botonDescarga">
+        <button class="btn__descarga-excel" id="btnDescargarExcel">
+            <i class="fa-solid fa-file-excel icono__btn-excel"></i>
+            Descargar Excel
+        </button>
+    </div>
 
     <div class="contenedor__formulario">
         <h1 class="container__title">Agregar</h1>
@@ -144,6 +156,8 @@
     </script>
 
     <script type="module" src="assets/js/agregar.js" defer></script>
+
+    <script type="module" src="assets/js/descargaExcel.js" defer></script>
 
 </body>
 
