--- a/buscar.html
+++ b/buscar.html
@@ -16,7 +16,12 @@
         <a class="navegacion__btn-regreso" href="index.html">
             <i class="btn-regreso__icon fa-solid fa-arrow-left"></i>
         </a>
+
+        <div class="navegacion__logo-contenedor">
+            <img class="logo__navegacion" src="assets/images/logo-transparente.png" alt="logo">
+        </div>
     </nav>
+
 
     <div class="buscar__contenedor">
         <input class="buscar__input" type="text" id="busqueda"
@@ -55,27 +60,102 @@
 
     <!-- Modal de edicion -->
     <!-- Modal de edición -->
-    <div id="modalEditar"
-        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.5); justify-content: center; align-items: center;">
-        <div style="background-color: white; padding: 20px; border-radius: 8px; width: 300px;">
+    <div class="modalFondo" id="modalEditar">
+        <div class="modal">
+            <div class="cancelar__icono-contenedor">
+                <i class="fa-solid fa-xmark icono__cerrar" id="btnCerrarModalIcon"></i>
+            </div>
             <h2>Editar Registro</h2>
             <form id="formEditar">
-                <input type="text" id="editNumeroTag" placeholder="Número de Tag">
-                <input type="text" id="editNumeroAlta" placeholder="Número de Alta">
-                <input type="text" id="editNombreLocal" placeholder="Nombre del Local">
-                <input type="text" id="editNombreSolicitante" placeholder="Nombre del Solicitante">
-                <input type="text" id="editEmpresaProyecto" placeholder="Empresa / Proyecto">
-                <input type="text" id="editStatusActivacion" placeholder="Status de Activación">
-                <input type="text" id="editStatusEntrega" placeholder="Status de Entrega">
-                <input type="text" id="editFechaAlta" placeholder="Fecha de Alta">
-                <input type="text" id="editTelefono" placeholder="Teléfono">
-                <input type="text" id="editCorreo" placeholder="Correo">
-                <input type="text" id="editModelo" placeholder="Modelo">
-                <input type="text" id="editColor" placeholder="Color">
-                <input type="text" id="editPlacas" placeholder="Placas">
-                <input type="text" id="editAño" placeholder="Año">
-                <button type="submit">Guardar Cambios</button>
-                <button type="button" id="btnCerrarModal">Cerrar</button>
+                <div class="formEditar__campo">
+                    <label class="etiqueta__form" for="editNumeroTag">Número de Tag</label>
+                    <input type="text" id="editNumeroTag" placeholder="Número de Tag">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editNumeroAlta" class="etiqueta__form">Número de alta</label>
+
+                    <input type="text" id="editNumeroAlta" placeholder="Número de Alta">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editNombreLocal" class="etiqueta__form">Nombre del local</label>
+
+                    <input type="text" id="editNombreLocal" placeholder="Nombre del Local">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editNombreSolicitante" class="etiqueta__form">Nombre del Solicitante</label>
+
+                    <input type="text" id="editNombreSolicitante" placeholder="Nombre del Solicitante">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editEmpresaProyecto" class="etiqueta__form">Empresa / Proyecto</label>
+
+                    <input type="text" id="editEmpresaProyecto" placeholder="Empresa / Proyecto">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="" class="etiqueta__form">Status de Activación</label>
+
+                    <input type="text" id="editStatusActivacion" placeholder="Status de Activación">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editStatusEntrega" class="etiqueta__form">Status de entrega</label>
+
+                    <input type="text" id="editStatusEntrega" placeholder="Status de Entrega">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editFechaAlta" class="etiqueta__form">Fecha de alta</label>
+
+                    <input type="date" id="editFechaAlta" placeholder="Fecha de Alta">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editTelefono" class="etiqueta__form">Teléfono</label>
+
+                    <input type="text" id="editTelefono" placeholder="Teléfono">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editCorreo" class="etiqueta__form">Correo</label>
+
+                    <input type="text" id="editCorreo" placeholder="Correo">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editModelo" class="etiqueta__form">Modelo</label>
+
+                    <input type="text" id="editModelo" placeholder="Modelo">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editColor" class="etiqueta__form">Color</label>
+
+                    <input type="text" id="editColor" placeholder="Color">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editPlacas" class="etiqueta__form">Placas</label>
+
+                    <input type="text" id="editPlacas" placeholder="Placas">
+                </div>
+
+                <div class="formEditar__campo">
+                    <label for="editAño" class="etiqueta__form">Año</label>
+
+                    <input type="text" id="editAño" placeholder="Año">
+                </div>
+
+
+                <div class="formulario__btn-contenedor">
+
+                    <button class="formulario__btn btn__guardar" type="submit">Guardar Cambios</button>
+                    <button class="formulario__btn btn__cancelar" type="button" id="btnCerrarModal">Cancelar</button>
+                </div>
             </form>
         </div>
     </div>
