Estilos corregidos y logo en el index

--- a/agregar.html
+++ b/agregar.html
@@ -24,7 +24,9 @@
         </div>
     </nav>
 
-    <div class="contenedor__botonDescarga">
+    <div class="contenedor__titulo">
+        <h1 class="titulo">Agregar</h1>
+
         <button class="btn__descarga-excel" id="btnDescargarExcel">
             <i class="fa-solid fa-file-excel icono__btn-excel"></i>
             Descargar Excel
@@ -32,7 +34,6 @@
     </div>
 
     <div class="contenedor__formulario">
-        <h1 class="container__title">Agregar</h1>
 
         <form id="registroForm" class="formulario__general">
             <!-- .formulario__contenedor -->
