--- a/buscar.html
+++ b/buscar.html
@@ -22,6 +22,15 @@
         </div>
     </nav>
 
+    <div class="contenedor__titulo">
+        <h1 class="titulo">Buscar</h1>
+
+        <button class="btn__descarga-excel" id="btnDescargarExcel">
+            <i class="fa-solid fa-file-excel icono__btn-excel"></i>
+            Descargar Excel
+        </button>
+    </div>
+
 
     <div class="buscar__contenedor">
         <input class="buscar__input" type="text" id="busqueda"
