--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
 
     <div class="container">
 
-        <h2 class="container__title">Inicio</h2>
+        <!-- <h2 class="container__title">Inicio</h2> -->
 
-        <div class="buttons">
+        <div class="contenedor__botones">
+            <div class="contenedor__logo">
+                <img src="assets/images/logo-azul.png" alt="" class="logo__index">
+            </div>
 
-            <a class="button__container" href="agregar.html">
-                <i class=" button__icon fa-solid fa-plus"></i>
-                <span class="" href="">Agregar</a>
-            </a>
-            <a class="button__container" href="buscar.html">
-                <i class=" button__icon fa-solid fa-magnifying-glass"></i>
-                <span class="">Buscar</span>
-            </a>
-            <a class="button__container" href="agregarPension.html">
-                <i class=" button__icon fa-solid fa-plus"></i>
-                <span class="">Nueva pensión</span>
-            </a>
+            <div class="botones__btn">
+                <a class="boton" href="agregar.html">
+                    <i class=" icono__boton fa-solid fa-plus"></i>
+                    <span class="boton__texto">Agregar Tag</span>
+                </a>
+                <a class="boton" href="buscar.html">
+                    <i class="icono__boton fa-solid fa-magnifying-glass"></i>
+                    <span class="boton__texto">Buscar Tag</span>
+                </a>
+                <a class="boton" href="agregarPension.html">
+                    <i class="icono__boton fa-solid fa-plus"></i>
+                    <span class="boton__texto">Pensiones</span>
+                </a>
+            </div>
         </div>
 
     </div>
