--- a/agregarPension.html
+++ b/agregarPension.html
@@ -45,6 +45,11 @@
             </div>
 
             <div class="formulario__campo">
+                <label for="numeroAlta">Número de Alta:</label>
+                <input type="text" id="numeroAlta">
+            </div>
+
+            <div class="formulario__campo">
                 <label for="statusActivacion">Status de activación:</label>
                 <select id="statusActivacion">
                     <option value="Activo">Activo</option>
@@ -99,7 +104,7 @@
 
             <div class="formulario__campo">
                 <label for="mesesPagados">Meses pagados:</label>
-                <input type="number" id="mesesPagados" min="1">
+                <input type="number" id="mesesPagados" min="1" required>
             </div>
 
             <div class="formulario__campo">
@@ -160,6 +165,7 @@
                 <thead>
                     <tr>
                         <th>Número de Tag</th>
+                        <th>Número de Alta</th>
                         <th>Status de activación</th>
                         <th>Nomenclatura del local</th>
                         <th>Nombre del local</th>
@@ -192,6 +198,11 @@
     </div>
 
     <!-- Tabla para mostrar los datos -->
+
+    <!-- Toast -->
+    <div id="toast" class="toast">
+        <span id="toastMessage"></span>
+    </div>
 
     <!-- Enlaza el archivo JavaScript -->
     <script type="module" src="assets/js/agregarPension.js"></script>
