Ajuste en el input de notas en pensiones

--- a/agregarPension.html
+++ b/agregarPension.html
@@ -148,9 +148,9 @@
                 <input type="number" id="año" min="1900" max="2099">
             </div>
 
-            <div class="formulario__campo campo__full">
+            <div class="formulario__campo">
                 <label for="notas">Notas:</label>
-                <textarea id="notas" rows="4"></textarea>
+                <textarea id="notas" rows="2"></textarea>
             </div>
 
             <div class="formulario__campo campo__full">
